Improve API: validation, pagination, config, indexes, error handling
- Add ModelState validation, ApiSettings, PagedResult for list endpoint
- Add DB indexes and null-safety in SQLiteDBContext and HadithDto
- Thread-safe RandomGenerator; GetRequiredService for IDBContext
- Dockerfile: extract SunnahDb from .rar when .db missing
- Swagger at /swagger; error middleware after routing; health checks

--- a/src/Api/Dockerfile
+++ b/src/Api/Dockerfile
@@ -10,11 +10,28 @@ RUN dotnet restore
 
 COPY . ./
 
+# Extract database from .rar if .db file doesn't exist
+# This handles the case where only SunnahDb.rar is in the repository
+RUN if [ ! -f SunnahDb.db ] && [ -f SunnahDb.rar ]; then \
+        apt-get update && \
+        apt-get install -y unrar && \
+        unrar x SunnahDb.rar . && \
+        apt-get remove -y unrar && \
+        apt-get autoremove -y && \
+        apt-get clean && \
+        rm -rf /var/lib/apt/lists/*; \
+    fi
+
 RUN dotnet publish "./The9Books.csproj" --output "./dist" --configuration Release --no-restore
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim
 WORKDIR /app
 COPY --from=builder /source/dist .
-COPY --from=builder /source/Data ./Data
+
+# Copy database file from builder stage
+# The builder stage extracts from .rar if .db doesn't exist, so .db should be available
+# If this fails, ensure SunnahDb.rar exists in src/Api/ - it will be extracted during build
+COPY --from=builder /source/SunnahDb.db .
+
 EXPOSE 80
 ENTRYPOINT ["dotnet", "The9Books.dll"]
