--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SunnahDb.db"
+  },
+  "ApiSettings": {
+    "MaxPageSize": 50,
+    "DefaultPageSize": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
